z-index fix

--- a/app/assets/stylesheets/global/_header.scss
+++ b/app/assets/stylesheets/global/_header.scss
@@ -375,6 +375,9 @@ md-menu-item {
   }
 }
 
+.md-open-menu-container {
+  z-index:101;
+}
 
 /*  !About - header  */
 
